============ Version 2.23.4

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.23.4

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/10-data/*:
	* browser-plugin/tests/10.html: Add test case, ripped from
	Apple's test page for Wall E

2008-06-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require gstreamer-tag as well
	* src/backend/bacon-video-widget.h:
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_metadata_pixbuf),
	(bacon_video_widget_get_best_image),
	(bacon_video_widget_get_metadata): Add code to read covers from
	video and audio files, through the tags
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_metadata): Implement stubs of the above
	* src/totem-video-thumbnailer.c (capture_interesting_frame),
	(capture_frame_at_time), (has_audio), (on_got_metadata_event),
	(main): Implement saving the cover of a video/audio file
	(Closes: #318748)

2008-06-10  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(on_video_button_press_event): Patch from Baptiste Mille-Mathias
	<bmm80@free.fr> to add double-click -> fullscreen support
	(Closes: #502073)

2008-06-10  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-plugin.c (totem_get_plugin_paths):
	* src/totem-uri.c (totem_ensure_dir), (totem_dot_dir),
	(totem_data_dot_dir):
	* src/totem-uri.h: Use ~/.local/share/totem/plugins/ for user-plugins

2008-06-10  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/mythtv/totem-mythtv.c (totem_mythtv_plugin_finalize),
	(impl_deactivate): Kill some more stuff on plugin exit

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README.browser-plugin: Link to a page will _all_
	the Quicktime plugin embed parameters
	* browser-plugin/tests/2.html: Add some Don Quixote text to allow
	use to test bug #343067
	* browser-plugin/totemPlugin.cpp: Slight change of behaviour to
	get the old behaviour back when using NPN_GetURL
